--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@ body{
 
 }
 /*
+    *UTILITIES
+*/
+
+.material-symbols-rounded{
+    @apply w-[1em] h-[1em] overflow-hidden;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+.container{
+    @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
+}
+
+/*
     *COMPONENTS
 */
 .menu-btn{
@@ -32,4 +45,10 @@ body{
 }
 .navbar .active-box{
     @apply absolute bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
+}
+.btn{
+    @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-colors
+}
+.btn-secondary{
+    @apply bg-zinc-50 text-zinc-900 active:border-zinc-50/80
 }
