--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ body{
 /*
     *TYPOGRAPHY
 */
-.headline-1{
+.headline-1,
+.headline-2{
     @apply max-w-max;
     background: -webkit-linear-gradient(0deg
     , #fafafa, #a1a1aa);
@@ -27,6 +28,9 @@ body{
     @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15];
 }
 
+.headline-2{
+    @apply text-3xl lg:text-4xl lg:leading-tight font-semibold;
+}
 /*
     *UTILITIES
 */
